// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetworkStep should render 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="mt-8 flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="css-1psxlcd"
          >
            <div
              class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="css-6y29t8"
              id="NetworkStep__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep should render with test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="mt-8 flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="css-1psxlcd"
          >
            <div
              class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <div
              class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              PUBLIC NETWORKS
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="css-6y29t8"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Blockpool"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bpl.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Qredit"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-xqr.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-13w0p49"
            type="horizontal"
          />
          <div
            class="mt-6"
          >
            <span
              class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              DEVELOPMENT NETWORKS
            </span>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="css-6y29t8"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-random.custom"
                >
                  AR
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia Testnet"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-bind.testnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Qredit Testnet"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-xqr.testnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep should render without test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="mt-8 flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="css-1psxlcd"
          >
            <div
              class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="css-6y29t8"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Blockpool"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bpl.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="relative flex h-0 cursor-pointer pb-[100%]"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Qredit"
                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-xqr.mainnet"
                >
                  <div
                    class="css-1i4b0eq"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;
